[package]
name = "unison-raspberry-pi-ir-hat"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2.33.3"
raspberry-pi-ir-hat = { path = "../raspberry-pi-ir-hat/drivers/rust/" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
ureq = "2.2.0"
log = "0.4.14"
simple_logger = "1.13.0"
paho-mqtt = "0.9.1"
futures = "0.3.17"
